# Payroll

./: CMakeLists.txt  README.md  test000  test000.db
src/: AccrualsPanel.cpp  AccrualsPanel.h  Database.cpp  Database.h  DivisionsPanel.cpp  DivisionsPanel.h  EmployeeEditPanel.cpp_old  EmployeeEditPanel.h  EmployeeListPanel.cpp  EmployeeListPanel.cpp_old  EmployeeListPanel.h  EmployeeListPanel.h_old  EmployeesPanel.cpp  EmployeesPanel.h  GUI.cpp  GUI.h  Icons.h  IndividualsPanel.cpp  IndividualsPanel.h  Manager.cpp  Manager.h  OrdersPanel.cpp  OrdersPanel.h  Panel.h  PdfExporter.cpp  PdfExporter.h  PositionsPanel.cpp  PositionsPanel.h  ReviewPanel.cpp  ReviewPanel.h  Settings.cpp  Settings.h  SettingsPanel.cpp  SettingsPanel.h  StatementsPanel.cpp  StatementsPanel.h  imgui_components.cpp  imgui_components.h  main.cpp
